[package]
name = "server_chan"
description = "server_chan rust sdk"
version = "0.1.2"
authors = ["EasyChen <easychen@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/easychen/serverchan-demo"
keywords = ["server_chan"]

[dependencies]
reqwest = "0.12"
serde_urlencoded = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
regex = "1.11.0"
dotenv = { version = "0.15.0" }
